--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/mongoose": "^5.11.96",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "multer": "^2.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.2",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
